<resources>
    <string name="app_name">Currency Converter</string>
    <string name="converter_from_convert_from_rub">Convert from ₽</string>
    <string name="converter_from_convert_to">Convert to</string>
    <string name="converter_edit_text">Enter the amount of rubles</string>
    <string name="converter_text_view_currency">Choose currency</string>
    <string name="converter_text_view_result">Result</string>
    <string name="converter_button_convert">Convert</string>
    <string name="list_currency_last_update">Last update:</string>
    <string name="sort_type_converter_menu">Sort type</string>
    <string name="sort_type_name_alphabetical_asc">Alphabetical ASC</string>
    <string name="sort_type_name_alphabetical_desc">Alphabetical DESC</string>
    <string name="sort_type_name_value_asc">Value ASC</string>
    <string name="sort_type_name_value_desc">Value DESC</string>
</resources>